<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ActivityLoginApp">

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="125dp"
        android:layout_height="70dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="105dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:textColorHint="@color/colorFontForm"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_fild_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/shape_edittext_form"
            android:hint="@string/acessUserLoginForm"
            android:padding="10dp"
            android:textColor="@color/colorFontForm" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="215dp"
        android:textColorHint="@color/colorFontForm"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_to_user_interface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/shape_edittext_form"
            android:hint="@string/acessUserPassForm"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/colorFontForm" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login_to_user_interface"
        android:layout_width="202dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="33dp"
        android:text="@string/TextAcessLogin"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/shape_button_login"
        android:textAllCaps="false"
        android:fontFamily="HelveticaNeue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>